tests/NormalTests/paczka1/fuzzy1/76646492.err
Error in line 1: yDPjPUu S891 0,02
Error in line 2: S411 S684 26,4
Error in line 8: l7UgFzFLht4 S684 60,9
Error in line 29: yDPjPUu S684 -1,1
Error in line 22: yDPjPUu S684 29,6
Error in line 33: wpKz S411 26,1
